[metadata]
name = server
summary = The Server
description-file =
    README.rst
author = David Moreau Simard
author-email = dmsimard@redhat.com
home-page = https://github.com/dmsimard/django_hello_world
classifier =
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    server

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
